CSS on play button for background behind play triangle, having issues with background showing behind triangle

--- a/frontend/src/components/Songs/SongCard.css
+++ b/frontend/src/components/Songs/SongCard.css
@@ -32,18 +32,39 @@ div.card-outer {
 
 .fa-circle-play {
     color: #f50;
-    background: black ;
+    /* background: black ; */
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.play-background {
+    position: absolute;
+    top:40%;
+    /* display: none; */
+    background: black;
+    height: 30px;
+    width: 30px;
+    z-index: 2;
+    border-radius: 50%;
 }
 
 .play-button {
     position: absolute;
+    height: 30px;
+    width: 30px;
     z-index: 2;
-    top: auto;
-    display: none;
-    left: auto;
-    background: transparent;
+    /* top: auto; */
+    /* display: none; */
+    /* left: auto; */
+    /* background: black; */
+    border-radius: 50%;
 }
 
 div.card-outer:hover .play-button {
+    display:block
+}
+div.card-outer:hover .play-background {
     display:block
 }
